--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <canvas id = "mycanvas" width="500"  height="500"></canvas>
+<script src="data.js"></script>
 <script src="draw.js"></script>
 <script src="platform.js"></script>
 <script src="player.js"></script>
