--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
-<canvas id = "mycanvas" width="500"  height="500"></canvas>
-<script src="data.js"></script>
-<script src="draw.js"></script>
-<script src="platform.js"></script>
-<script src="player.js"></script>
-<script src="game.js"></script>
+<head>
+    <link rel="stylesheet" href="/styles.css">
+
+</head>
+<body>
+    <div id="wrap">
+        <div id="left">
+            fwes
+        </div>
+        <canvas id = "mycanvas" width="500"  height="500"></canvas>
+        <script src="data.js"></script>
+        <script src="draw.js"></script>
+        <script src="platform.js"></script>
+        <script src="player.js"></script>
+        <script src="game.js"></script>
+        <div id="right">
+            tbyt
+        </div>
+
+    </div>
+    
+</body>
